[gd_scene load_steps=8 format=2]

[ext_resource path="res://level/game_over_handler.gd" type="Script" id=1]
[ext_resource path="res://sound/good_type_sound.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/x_key.png" type="Texture" id=3]
[ext_resource path="res://theme/styles/gameover_theme.tres" type="Theme" id=4]
[ext_resource path="res://theme/fonts/final_score_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://sound/complete_sound.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "game_over"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("theme_node/game_over_node:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("theme_node/game_info/row_labels/score_panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.67451, 0.67451, 0.67451, 0 ), Color( 1, 1, 1, 0 ), Color( 0.67451, 0.67451, 0.67451, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("theme_node/game_info/row_labels/websites_visited_panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.67451, 0.67451, 0.67451, 0 ), Color( 1, 1, 1, 0 ), Color( 0.67451, 0.67451, 0.67451, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("theme_node/game_info/this_col/col_title_panel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.67451, 0.67451, 0.67451, 0 ), Color( 1, 1, 1, 0 ), Color( 0.67451, 0.67451, 0.67451, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("theme_node/game_info/best_col/col_title_panel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.67451, 0.67451, 0.67451, 0 ), Color( 1, 1, 1, 0 ), Color( 0.67451, 0.67451, 0.67451, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("theme_node/game_info/v_sep:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.67451, 0.67451, 0.67451, 0 ), Color( 1, 1, 1, 0 ), Color( 0.67451, 0.67451, 0.67451, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("theme_node/game_info/v_sep2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.67451, 0.67451, 0.67451, 0 ), Color( 1, 1, 1, 0 ), Color( 0.67451, 0.67451, 0.67451, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("theme_node/game_info/this_col/score_panel:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.6, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("theme_node/game_info/this_col/websites_visited_panel:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.6, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("theme_node/game_info/best_col/score_panel:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.6, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("theme_node/game_info/best_col/websites_visited_panel:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.6, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "method"
tracks/11/path = NodePath(".")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.3, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_allow_skip"
}, {
"args": [  ],
"method": "run_score_tween"
} ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("theme_node/skip_prompt:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("theme_node/game_over_fade:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.407843, 0.407843, 0.407843, 0.878431 ) ]
}

[node name="game_over_handler" type="CanvasLayer"]
unique_name_in_owner = true
visible = false
script = ExtResource( 1 )

[node name="theme_node" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="game_over_player" type="AnimationPlayer" parent="theme_node"]
unique_name_in_owner = true
root_node = NodePath("../..")
anims/game_over = SubResource( 1 )

[node name="game_over_fade" type="ColorRect" parent="theme_node"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="game_info" type="HBoxContainer" parent="theme_node"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -274.0
margin_top = -79.0
margin_right = 274.0
margin_bottom = 79.0

[node name="row_labels" type="VBoxContainer" parent="theme_node/game_info"]
margin_right = 180.0
margin_bottom = 158.0

[node name="blank" type="Panel" parent="theme_node/game_info/row_labels"]
margin_right = 180.0
margin_bottom = 50.0
rect_min_size = Vector2( 180, 50 )

[node name="score_panel" type="Panel" parent="theme_node/game_info/row_labels"]
modulate = Color( 0.67451, 0.67451, 0.67451, 0 )
margin_top = 54.0
margin_right = 180.0
margin_bottom = 104.0
rect_min_size = Vector2( 180, 50 )

[node name="score_text" type="Label" parent="theme_node/game_info/row_labels/score_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
text = "Score"
align = 2
valign = 1

[node name="websites_visited_panel" type="Panel" parent="theme_node/game_info/row_labels"]
modulate = Color( 0.67451, 0.67451, 0.67451, 0 )
margin_top = 108.0
margin_right = 180.0
margin_bottom = 158.0
rect_min_size = Vector2( 180, 50 )

[node name="websites_visited_text" type="Label" parent="theme_node/game_info/row_labels/websites_visited_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
text = "Visited"
align = 2
valign = 1

[node name="v_sep" type="VSeparator" parent="theme_node/game_info"]
modulate = Color( 0.67451, 0.67451, 0.67451, 0 )
margin_left = 180.0
margin_right = 184.0
margin_bottom = 158.0

[node name="this_col" type="VBoxContainer" parent="theme_node/game_info"]
margin_left = 184.0
margin_right = 364.0
margin_bottom = 158.0

[node name="col_title_panel" type="Panel" parent="theme_node/game_info/this_col"]
modulate = Color( 0.67451, 0.67451, 0.67451, 0 )
margin_right = 180.0
margin_bottom = 50.0
rect_min_size = Vector2( 180, 50 )

[node name="col_title" type="Label" parent="theme_node/game_info/this_col/col_title_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "This run"
align = 1
valign = 1

[node name="score_panel" type="Panel" parent="theme_node/game_info/this_col"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 54.0
margin_right = 180.0
margin_bottom = 104.0
rect_min_size = Vector2( 180, 50 )

[node name="this_score_text" type="Label" parent="theme_node/game_info/this_col/score_panel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "0,000,000,000"
align = 1
valign = 1

[node name="websites_visited_panel" type="Panel" parent="theme_node/game_info/this_col"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 108.0
margin_right = 180.0
margin_bottom = 158.0
rect_min_size = Vector2( 180, 50 )

[node name="this_websites_visited_text" type="Label" parent="theme_node/game_info/this_col/websites_visited_panel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "0,000,000,000"
align = 1
valign = 1

[node name="v_sep2" type="VSeparator" parent="theme_node/game_info"]
modulate = Color( 0.67451, 0.67451, 0.67451, 0 )
margin_left = 364.0
margin_right = 368.0
margin_bottom = 158.0

[node name="best_col" type="VBoxContainer" parent="theme_node/game_info"]
margin_left = 368.0
margin_right = 548.0
margin_bottom = 158.0

[node name="col_title_panel" type="Panel" parent="theme_node/game_info/best_col"]
modulate = Color( 0.67451, 0.67451, 0.67451, 0 )
margin_right = 180.0
margin_bottom = 50.0
rect_min_size = Vector2( 180, 50 )

[node name="col_title" type="Label" parent="theme_node/game_info/best_col/col_title_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Best"
align = 1
valign = 1

[node name="score_panel" type="Panel" parent="theme_node/game_info/best_col"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 54.0
margin_right = 180.0
margin_bottom = 104.0
rect_min_size = Vector2( 180, 50 )

[node name="best_score_text" type="Label" parent="theme_node/game_info/best_col/score_panel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "0,000,000,000"
align = 1
valign = 1

[node name="websites_visited_panel" type="Panel" parent="theme_node/game_info/best_col"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 108.0
margin_right = 180.0
margin_bottom = 158.0
rect_min_size = Vector2( 180, 50 )

[node name="best_websites_visited_text" type="Label" parent="theme_node/game_info/best_col/websites_visited_panel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "0,000,000,000"
align = 1
valign = 1

[node name="score_counter" type="Tween" parent="theme_node/game_info"]
unique_name_in_owner = true

[node name="typing_noise" type="AudioStreamPlayer" parent="theme_node"]
unique_name_in_owner = true
stream = ExtResource( 2 )

[node name="win_noise" type="AudioStreamPlayer" parent="theme_node"]
unique_name_in_owner = true
stream = ExtResource( 6 )

[node name="skip_prompt" type="HBoxContainer" parent="theme_node"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -228.0
margin_top = -50.0
margin_right = -5.0
rect_min_size = Vector2( 186, 40 )

[node name="press_label" type="Label" parent="theme_node/skip_prompt"]
margin_top = 8.0
margin_right = 70.0
margin_bottom = 41.0
text = "Press"

[node name="x_image" type="TextureRect" parent="theme_node/skip_prompt"]
margin_left = 70.0
margin_right = 120.0
margin_bottom = 50.0
texture = ExtResource( 3 )

[node name="to_skip_label" type="Label" parent="theme_node/skip_prompt"]
margin_left = 120.0
margin_top = 8.0
margin_right = 218.0
margin_bottom = 41.0
text = "to skip"

[node name="game_over_node" type="Label" parent="theme_node"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -140.0
margin_right = 63.0
margin_bottom = -107.0
text = "GAME OVER"
